项目列表修改7
项目列表修改7

--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -22,25 +22,27 @@
     <div class="project_banner clearFix">
         {dede:myad name='projectpic_pc'/}
     </div>
-    <div class="project_content">
+    <div class="project_content" id="pro_01">
         <div id="ptab2">
             <ul id="project_nav" class="btn clearFix">
-                <li class="nav_list"><a href="/projects" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></a></li>
-                <li class="nav_list"><a href="/projects/eye/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
-                <li class="nav_list"><a href="/projects/nose/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></a></li>
-                <li class="nav_list"> <a href="/projects/face/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi3.jpg" alt="面部五官项目"/></a></li>
-                <li class="nav_list"><a href="/projects/tattoo/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi4.jpg" alt="纹绣项目"/></a></li>
-                <li class="nav_list"><a href="/projects/skin/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi5.jpg" alt="皮肤美容"/></a></li>
-                <li class="nav_list"><a href="/projects/chest/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi6.jpg" alt="胸部整形"/></a></li>
-                <li class="nav_list"><a href="/projects/private/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi7.jpg" alt="私密整形"/></a></li>
-                <li class="nav_list"><a href="/projects/body/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi8.jpg" alt="形体雕塑"/></a></li>
-                <li class="nav_list"> <a href="/projects/ha/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi9.jpg" alt="玻尿酸"/></a></li>
-                <li class="nav_list"><a href="/projects/botox/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi10.jpg" alt="botox"/></a></li>
-                <li class="nav_list"><a href="/projects/hengli/" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></a></li>
+                <li class="nav_list">
+                    <a href="/projects" class="nav_link">
+                        <img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/>
+                    </a>
+                </li>
+                <li class="nav_list"><a href="/projects/eye/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
+                <li class="nav_list"><a href="/projects/nose/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></a></li>
+                <li class="nav_list"> <a href="/projects/face/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi3.jpg" alt="面部五官项目"/></a></li>
+                <li class="nav_list"><a href="/projects/tattoo/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi4.jpg" alt="纹绣项目"/></a></li>
+                <li class="nav_list"><a href="/projects/skin/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi5.jpg" alt="皮肤美容"/></a></li>
+                <li class="nav_list"><a href="/projects/chest/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi6.jpg" alt="胸部整形"/></a></li>
+                <li class="nav_list"><a href="/projects/private/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi7.jpg" alt="私密整形"/></a></li>
+                <li class="nav_list"><a href="/projects/body/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi8.jpg" alt="形体雕塑"/></a></li>
+                <li class="nav_list"> <a href="/projects/ha/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi9.jpg" alt="玻尿酸"/></a></li>
+                <li class="nav_list"><a href="/projects/botox/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi10.jpg" alt="botox"/></a></li>
+                <li class="nav_list"><a href="/projects/hengli/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></a></li>
             </ul>
-            <!--<div class="gengduo j-consult">更多</div>-->
         </div>
-
         <ul id="ptabCon2" class="project_con clearFix">
             <li>
                 {dede:list pagesize="12" titlelen="120" orderby="weight" orderway="desc"}
