--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -18,15 +18,15 @@
         <div id="doctors_banner"> {dede:myad name='doctorpic_pc'/}</div>
         <div class="doctors_content">
             <div id="doctors_tab">
-                <ul class="clearFix" id="doctor_nav">
+                <ul class="clearFix btn" id="doctor_nav">
                     <li class="nav_list"><a href="/doctors" class="nav-link">全部专家</a></li>
                     <li class="nav_list"><a href="/doctors/surgery/" class="nav-link">整形美容专家</a></li>
-                    <li class="nav_list"><a href="/doctors/tattoo/" class="nav-link">皮肤美容专家</a></li>
+                    <li class="nav_list"><a href="/doctors/laser/" class="nav-link">皮肤美容专家</a></li>
                     <li class="nav_list"><a href="/doctors/tattoo/" class="nav-link">医学纹绣师</a></li>
                 </ul>
             </div>
             <div id="doctors_tabCon">
-                <ul class="doc_fdiv clearFix">
+                <ul class="doc_fdiv doc_con clearFix">
 
                         {dede:list pagesize="8"  titlelen="120" orderby="weight" orderway="asc" }
                     <li>
