项目列表修改
项目列表修改

--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -43,8 +43,8 @@
                 <li class="nav_list"><a href="/projects/hengli/#pro_01" class="nav-link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi11.jpg" alt="衡力"/></a></li>
             </ul>
         </div>
-        <ul id="ptabCon2" class="project_con clearFix">
-            <li>
+        <ul id="ptabCon2" class="project_con">
+            <li class="clearFix">
                 {dede:list pagesize="12" titlelen="120" orderby="weight" orderway="desc"}
 
                 <a href="[field:arcurl/]" title="[field:title/]">
