--- a/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_doctors.htm
@@ -19,10 +19,10 @@
         <div class="doctors_content">
             <div id="doctors_tab">
                 <ul class="clearFix btn" id="doctor_nav">
-                    <li class="nav_list"><a href="/doctors" class="nav-link">全部专家</a></li>
-                    <li class="nav_list"><a href="/doctors/surgery/" class="nav-link">整形美容专家</a></li>
-                    <li class="nav_list"><a href="/doctors/laser/" class="nav-link">皮肤美容专家</a></li>
-                    <li class="nav_list"><a href="/doctors/tattoo/" class="nav-link">医学纹绣师</a></li>
+                    <li class="nav_list"><a href="/doctors" class="nav_link">全部专家</a></li>
+                    <li class="nav_list"><a href="/doctors/surgery/" class="nav_link">整形美容专家</a></li>
+                    <li class="nav_list"><a href="/doctors/laser/" class="nav_link">皮肤美容专家</a></li>
+                    <li class="nav_list"><a href="/doctors/tattoo/" class="nav_link">医学纹绣师</a></li>
                 </ul>
             </div>
             <div id="doctors_tabCon">
