--- a/www.hzshuangmei.com/templets/shuangmei/list_project.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_project.htm
@@ -24,7 +24,7 @@
     </div>
     <div class="project_content" id="pro_01">
         <div id="ptab2">
-            <ul id="project_nav" class="btn clearFix">
+            <ul id="project_nav" class="btn1 clearFix">
                 <li class="nav_list"><a href="/projects" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi0.jpg" alt="全部项目"/></a></li>
                 <li class="nav_list"><a href="/projects/eye/#pro_01" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi1.jpg" alt="眼部项目"/></a></li>
                 <li class="nav_list"><a href="/projects/nose/#pro_01" class="nav_link"><img src="{dede:global.cfg_imgpath/}/pc/project_hi2.jpg" alt="鼻部项目"/></a></li>
