--- a/www.hzshuangmei.com/templets/shuangmei/_header.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_header.htm
@@ -39,7 +39,7 @@
             <div class="clearFix" id="project">
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">医学纹绣</a></h5>
+                        <h5><a href="/projects/tattoo/" target="_blank">医学纹绣</a></h5>
                     </li>
                     {dede:arclist typeid=20 orderby='id' row='3'}
                     <li>
@@ -55,7 +55,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">眼部整形</a></h5>
+                        <h5><a href="/projects/eye/" target="_blank">眼部整形</a></h5>
                     </li>
                     {dede:arclist typeid=15 orderby='id' row='3'}
                     <li>
@@ -69,7 +69,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">鼻部整形</a></h5>
+                        <h5><a href="/projects/nose/" target="_blank">鼻部整形</a></h5>
                     </li>
                     {dede:arclist typeid=14 orderby='id' row='3'}
                     <li>
@@ -83,7 +83,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">面部整形</a></h5>
+                        <h5><a href="/projects/face/" target="_blank">面部整形</a></h5>
                     </li>
                     {dede:arclist typeid=16 orderby='id' row='3'}
                     <li class="star">
@@ -97,7 +97,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">皮肤美容</a></h5>
+                        <h5><a href="/projects/skin/" target="_blank">皮肤美容</a></h5>
                     </li>
                     {dede:arclist typeid=21 orderby='id' row='3'}
                     <li>
@@ -111,7 +111,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">玻尿酸</a></h5>
+                        <h5><a href="/projects/ha/" target="_blank">玻尿酸</a></h5>
                     </li>
                     {dede:arclist typeid=22 orderby='id' row='3'}
                     <li>
@@ -125,7 +125,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/projects" target="_blank">形体雕塑</a></h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
+                        <h5><a href="/projects/body/" target="_blank">形体雕塑</a></h5> </li> {dede:arclist typeid=19 orderby='id' row='3'}
                     <li>
                         <a href="[field:arcurl/]" target="_blank">
                             <img src="[field:picname function='replaceurl(@me)/]" alt=""/>
@@ -145,7 +145,7 @@
             <div id="expert">
                 <ul>
                     <li>
-                        <h5><a href="/doctors" target="_blank">整形美容专家</a></h5>
+                        <h5><a href="/doctors/surgery" target="_blank">整形美容专家</a></h5>
                     </li>
 <!--                     {dede:arclist typeid=3  channelid="17"  isweight='y'  orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -167,7 +167,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/doctors" target="_blank">激光美容专家</a></h5>
+                        <h5><a href="/doctors/laser" target="_blank">激光美容专家</a></h5>
                     </li>
         <!--             {dede:arclist typeid=4   channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
@@ -190,7 +190,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <h5><a href="/doctors" target="_blank">医学纹绣</a></h5>
+                        <h5><a href="/doctors/tattoo" target="_blank">医学纹绣</a></h5>
                     </li>
  <!--                    {dede:arclist typeid=5    channelid="17" isweight='y' orderby='weight'  row='2' addfields="zhiwei,thumb"}
                     <li>
