--- a/www.hzshuangmei.com/templets/shuangmei/_footer.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_footer.htm
@@ -19,15 +19,15 @@
                 <i></i>
             </div>
             <ul class="mar_t">
-                <li><a class="j-site-consult" href="javascript:void(0)" target="_blank">>胸部整形</a></li>
-                <li><a href="">>眼部整形</a></li>
-                <li><a href="">>鼻部整形</a></li>
+                <li><a href="/projects/chest/" target="_blank">>胸部整形</a></li>
+                <li><a href="/projects/eye/">>眼部整形</a></li>
+                <li><a href="/projects/nose/">>鼻部整形</a></li>
                 <li><a href="">>唇部整形</a></li>
-                <li><a href="">>塑形体雕</a></li>
+                <li><a href="/projects/body/">>塑形体雕</a></li>
                 <li><a href="">>自体脂肪填充</a></li>
                 <li><a href="">>其他系列</a></li>
                 <li><a href="">>下巴整形</a></li>
-                <li><a href="">>私密整形</a></li>
+                <li><a href="/projects/private/">>私密整形</a></li>
             </ul>
         </div>
         <div class="clearFix border-l border-r">
