--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -371,6 +371,7 @@
     </div>
 </div>
 <!--红妆历程-->
+<div class="lc">{dede:myad name='pc_hzslrz'/}</div>
 <!--红妆历程-->
 <div class="index_environment">
     <div class="m1">
