--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -370,6 +370,9 @@
         <a href="/cases" class="ask" target="_blank" rel="nofollow">MORE+</a>
     </div>
 </div>
+<!--红妆历程-->
+<div class="lic">{dede:myad name='pc_hzslrz'/}</div>
+<!--红妆历程-->
 <div class="index_environment">
     <div class="m1">
         <ul class="clearFix">
