--- a/m.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/m.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -17,3 +17,6 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <script src="https://js.hzshuangmei.com/m/mobile-util.js" type="text/javascript"></script>
+<script src="http://apps.bdimg.com/libs/jquery/1.11.3/jquery.js" type="text/javascript"></script>
+
+
