--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -131,7 +131,7 @@
                     <div class="right clearFix">
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_16.jpg"   alt="法思丽玻尿酸"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_17.jpg"   alt="瑞蓝玻尿酸"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img s data-rc="{dede:global.cfg_imgpath/}/pc/p1_18.jpg"   alt="逸美玻尿酸"/></a>
+                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_18.jpg"   alt="逸美玻尿酸"/></a>
                         <a href="projects/ha/ifresh.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_19.jpg" alt="爱芙莱玻尿酸"/></a>
                         <a href="projects/botox/shoulianzhen2.html" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_20.jpg"   alt="瘦脸针"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_21.jpg"   alt="BOTOX"/></a>
