优化案例详情页右侧推荐项目和专家的MORE链接
优化案例详情页右侧推荐项目和专家的MORE链接

--- a/www.hzshuangmei.com/templets/shuangmei/article_aside.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_aside.htm
@@ -26,7 +26,8 @@
                 <a href="/doctors/" target="_blank">推荐专家</a><br/>
                 <a href="/doctors/" target="_blank">popular expert</a>
             </h2>
-            <a href="/doctors/" target="_blank">more+</a>
+           <!--  <a href="/doctors/" target="_blank">more+</a> -->
+            {dede:FIELD.typeid function='MoreHotProjectAboutCase(@me)'/}
         </div>
         <div class="aside_ex center1">
             <!-- <a href="doctors/surgery/guanhaitao.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/ar_case_04.jpg" alt="关海涛"/></a>
@@ -40,7 +41,8 @@
                 <a href="/cases/" target="_blank">热门日记</a><br/>
                 <a href="/cases/" target="_blank">popular jounal</a>
             </h2>
-            <a href="/cases/" target="_blank">more+</a>
+          <!--   <a href="/cases/" target="_blank">more+</a> -->
+             {dede:FIELD.typeid function='MoreCommendDoctorsAboutCase(@me)'/}
         </div>
         <div class="aside_jou center1">
             <div>
