--- a/www.hzshuangmei.com/templets/shuangmei/article_article.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_article.htm
@@ -7,6 +7,7 @@
         <meta name="keywords" content="{dede:field name='keywords'/}" />
         <meta name="description" content="{dede:field name='description' function='html2text(@me)'/}" />
         <!-- published time -->
+        <meta property="article:author" content="红妆双美"/>
         <meta property="article:published_time" content="{dede:field.pubdate function="MyDate('Y-m-d',@me)"/}T{dede:field.pubdate function="MyDate('H:i:s',@me)"/}+08:00">
         <meta property="article:tag" content="{dede:field name='keywords'/}">
         {dede:include filename="_link.htm"/}
