--- a/www.hzshuangmei.com/templets/shuangmei/article_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/article_case.htm
@@ -6,6 +6,9 @@
     <title>{dede:field.title/}的{dede:field.typename/}美丽日记_{dede:global.cfg_webname/}</title>
     <meta name="keywords" content="{dede:field name='keywords'/}"/>
     <meta name="description" content="{dede:field name='description' function='html2text(@me)'/}"/>
+     <meta property="article:author" content="红妆双美"/>
+     <meta property="article:published_time" content="{dede:field.pubdate function="MyDate('Y-m-d',@me)"/}T{dede:field.pubdate function="MyDate('H:i:s',@me)"/}+08:00">
+        <meta property="article:tag" content="{dede:field name='keywords'/}">
     {dede:include filename="_link.htm"/}
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/article_case.css"/>
     <link rel="stylesheet" href="{dede:global.cfg_csspath/}/pc/article_common.css"/>
