新闻列表页设置锚点
新闻列表页设置锚点

--- a/www.hzshuangmei.com/templets/shuangmei/list_news.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_news.htm
@@ -23,7 +23,7 @@
         {dede:myad name='newspic_pc'/}
     </div>
     <div class="news_content">
-        <h3><img src="{dede:global.cfg_imgpath/}/pc/ns_01.png" alt=""/></h3>
+        <h3 id="news_nav"><img src="{dede:global.cfg_imgpath/}/pc/ns_01.png" alt="红妆双美新闻"/></h3>
         <ul class="news_main">
             {dede:list pagesize='10' orderby='id'}
             <li class="clearFix">
