--- a/www.hzshuangmei.com/templets/shuangmei/list_case.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_case.htm
@@ -19,17 +19,17 @@
             <div id="case_tab">
                 <ul class="btn" id="case_nav">
                     <li class="nav_list"><a href="/cases" class="nav_link">全部案例 ></a></li>
-                    <li class="nav_list"><a href="/cases/eye/#ca_01" class="nav_link">眼部 ></a></li>
-                    <li class="nav_list"><a href="/cases/nose/#ca_01" class="nav_link">鼻部 ></a></li>
-                    <li class="nav_list"><a href="/cases/face/#ca_01" class="nav_link">面部 ></a></li>
-                    <li class="nav_list"><a href="/cases/tattoo/#ca_01" class="nav_link">纹绣 ></a></li>
-                    <li class="nav_list"><a href="/cases/skin/#ca_01" class="nav_link">皮肤 ></a></li>
-                    <li class="nav_list"><a href="/cases/chest/#ca_01" class="nav_link">胸部 ></a></li>
-                    <li class="nav_list"><a href="/cases/private/#ca_01" class="nav_link">私密 ></a></li>
-                    <li class="nav_list"><a href="/cases/body/#ca_01" class="nav_link">形体 ></a></li>
-                    <li class="nav_list"><a href="/cases/ha/#ca_01" class="nav_link">玻尿酸 ></a></li>
-                    <li class="nav_list"><a href="/cases/botox/#ca_01" class="nav_link">botox ></a></li>
-                    <li class="nav_list"><a href="/cases/hengli/#ca_01" class="nav_link">衡力 ></a></li>
+                    <li class="nav_list"><a href="/cases/eye/" class="nav_link">眼部 ></a></li>
+                    <li class="nav_list"><a href="/cases/nose/" class="nav_link">鼻部 ></a></li>
+                    <li class="nav_list"><a href="/cases/face/" class="nav_link">面部 ></a></li>
+                    <li class="nav_list"><a href="/cases/tattoo/" class="nav_link">纹绣 ></a></li>
+                    <li class="nav_list"><a href="/cases/skin/" class="nav_link">皮肤 ></a></li>
+                    <li class="nav_list"><a href="/cases/chest/" class="nav_link">胸部 ></a></li>
+                    <li class="nav_list"><a href="/cases/private/" class="nav_link">私密 ></a></li>
+                    <li class="nav_list"><a href="/cases/body/" class="nav_link">形体 ></a></li>
+                    <li class="nav_list"><a href="/cases/ha/" class="nav_link">玻尿酸 ></a></li>
+                    <li class="nav_list"><a href="/cases/botox/" class="nav_link">botox ></a></li>
+                    <li class="nav_list"><a href="/cases/hengli/" class="nav_link">衡力 ></a></li>
                 </ul>
             </div>
             <div id="case_tabCon">
