修改新闻页翻页参数
修改新闻页翻页参数

--- a/www.hzshuangmei.com/templets/shuangmei/list_news.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/list_news.htm
@@ -40,7 +40,7 @@
         </ul>
         <div class="ns_pa clearFix">
             <ul class="pagination clearFix">
-                {dede:pagelist istitem="pre,next" listsize="3"/}
+                {dede:pagelist istitem="pre,next,pageno,index,end" listsize="3"/}
             </ul>
             <div class="clearFix">
                 <p><i class="share_01"></i><span>分享到：</span></p>
