修改字符串拼接
修改字符串拼接

--- a/www.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -11,6 +11,6 @@
 <meta name="google-site-verification" content="Odmo8X4zeUG1WPcCrCAueZz-dyBPFBs4Zqlb9FBT5z4" />
 <!--  OG -->
 <meta property="og:title" content="{dede:field.title/}"/>
-<meta property="og:url" content="{dede:field.id runphp='yes'} $id=@me;@me='';$url=GetOneArchive($id);@me=$url['arcurl'];@me='https://www.hzshuangmei.com'+@me;{/dede:field.id}"/>
+<meta property="og:url" content="{dede:field.id runphp='yes'} $id=@me;@me='';$url=GetOneArchive($id);@me=$url['arcurl'];@me='https://www.hzshuangmei.com'.@me;{/dede:field.id}"/>
 
 
