更换首页项目链接
更换首页项目链接

--- a/www.hzshuangmei.com/templets/shuangmei/_footer.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_footer.htm
@@ -102,7 +102,7 @@
                 <!--{/dede:flink}-->
             <!--</div>-->
             <p class="copyright">Copyright © 2017 红妆双美 版权所有 违者必究 | <a href="/statement/copyright.html" rel="nofollow" target="_blank">版权及隐私声明</a><br>
-              设计,文案,技术等求职请投递至网络部root#hzwlb.org(#t替换成@)</p>
+              设计,文案,技术等求职请投递至网络部root#hzwlb.org(#替换成@)</p>
         </div>
     </div>
 </footer>
