--- a/www.hzshuangmei.com/templets/shuangmei/index.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/index.htm
@@ -99,11 +99,11 @@
                     <div class="left"><a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_01.jpg"  alt="红妆芭比大眼"/></a>
                     </div>
                     <div class="right clearFix">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_02.jpg" alt="红妆无痕祛眼袋"/></a>
+                        <a href="/projects/eye/yandai.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_02.jpg" alt="红妆无痕祛眼袋"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_03.jpg" alt="韩式隆鼻"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_04.jpg" alt="红妆芭比翘鼻"/></a>
+                        <a href="/projects/nose/hzbbqb.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_04.jpg" alt="红妆芭比翘鼻"/></a>
                         <a href="/projects/nose/heben.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_05.jpg" alt="赫本软骨鼻"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_06.jpg" alt="自体脂肪填充"/></a>
+                        <a href="/projects/face/zitizhifang.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_06.jpg" alt="自体脂肪填充"/></a>
                         <a href="/projects/chest/hzwhfx.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_07.jpg" alt="无痕丰胸"/></a>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
             <li>
                 <div class="clearFix">
                     <div class="left">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_08.jpg"  alt="无创量子祛斑"/></a>
+                        <a href="/projects//projects/quban/wuchuang.html " target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_08.jpg"  alt="无创量子祛斑"/></a>
                     </div>
                     <div class="right clearFix">
                         <!--<a class="j-site-consult" href="javascript:void(0)" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_09.jpg" alt="超声刀"/></a>-->
@@ -129,8 +129,8 @@
                     <div class="left"><a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_15.jpg"  alt="微针回春术"/></a>
                     </div>
                     <div class="right clearFix">
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_16.jpg"   alt="法思丽玻尿酸"/></a>
-                        <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_17.jpg"   alt="瑞蓝玻尿酸"/></a>
+                        <a href="/projects/ha/facille.html" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_16.jpg"   alt="法思丽玻尿酸"/></a>
+                        <a href="/projects/ha/hzrlbns.html" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_17.jpg"   alt="瑞蓝玻尿酸"/></a>
                         <a class="j-site-consult" href="javascript:void(0)" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_18.jpg"   alt="逸美玻尿酸"/></a>
                         <a href="projects/ha/ifresh.html" target="_blank"><img src="{dede:global.cfg_imgpath/}/pc/p1_19.jpg" alt="爱芙莱玻尿酸"/></a>
                         <a href="projects/botox/shoulianzhen2.html" target="_blank"><img  src="{dede:global.cfg_imgpath/}/pc/p1_20.jpg"   alt="瘦脸针"/></a>
