--- a/www.hzshuangmei.com/templets/shuangmei/_meta.htm
+++ b/www.hzshuangmei.com/templets/shuangmei/_meta.htm
@@ -9,5 +9,6 @@
 <meta http-equiv="Cache-Control" content="no-siteapp"/>
 <meta name="baidu-site-verification" content="99J7V1k1Vz" />
 <meta name="google-site-verification" content="Odmo8X4zeUG1WPcCrCAueZz-dyBPFBs4Zqlb9FBT5z4" />
+<meta http-equiv="Access-Control-Allow-Origin" content="*" />
 
 
